--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
      My awesome web page
     </title>
   </head>
+  <body> <h1>i am here</h1></body>
   <body>
     Hello there, awesome person! 
   </body>
