--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
   <body>
     Hello there, awesome person! 
   </body>
+  <body>
+    <ul>
+
+    <li>one</li>
+
+    <li>two</li>
+
+    <li>three</li>
+
+</ul>
+    </body>
   <img src="https://octodex.github.com/images/vinyltocat.png">
 </html>
