--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <ul>
 
-    <li>one</li>
+          <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 
     <li>two</li>
 
