--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
      My awesome web page
     </title>
   </head>
+  <head>
+
+        <title>I am a title!</title>
+
+        <link rel="stylesheet" href="style.css">
+
+    </head>
   <body> <h1>i am here</h1></body>
   <body>
     Hello there, awesome person! 
